# Mycelia-API

./: .containerignore  .dockerignore  .env.example  .gitignore  Containerfile  Dockerfile  README.md  biome.json  compose.yml  docker-compose.yml  example-nginx.conf  nestia.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  swagger.json  swagger.nestjs.yaml  swagger.yaml  swagger.yml  tsconfig.build.json  tsconfig.json
.claude/: settings.local.json
docs/: mkdocs.yml  pyproject.toml
docs/site/: 404.html  index.html  sitemap.xml
docs/site/api/openapi/: index.html
docs/site/api/reference/: index.html  swagger-a86400b8.html
docs/site/assets/javascripts/lunr/: wordcut.js
docs/site/assets/javascripts/lunr/min/: lunr.ar.min.js  lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.el.min.js  lunr.es.min.js  lunr.fr.min.js  lunr.he.min.js  lunr.hu.min.js  lunr.it.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.ro.min.js  lunr.ru.min.js  lunr.sv.min.js  lunr.tr.min.js
docs/site/assets/javascripts/workers/: search.f8cc74c7.min.js
docs/site/guides/authentication/: index.html
docs/site/guides/feed-management/: index.html
docs/site/guides/getting-started/: index.html
docs/site/guides/tags-favorites/: index.html
docs/site/search/: search_index.json
docs/src/docs/: index.md
docs/src/docs/api/: openapi.md  reference.md
docs/src/docs/css/: mkdocsoad.css
docs/src/docs/guides/: authentication.md  feed-management.md  getting-started.md  tags-favorites.md
nginx/: rss-news-api.conf
patches/: @nestia__core@8.0.5.patch
src/: main.ts  (+7 more)
(+343 files in other folders)
