[project]
name = "docs"
version = "0.1.0"
description = "RSS News API document"
authors = [
    { name = "Neuron Grid", email = "neuron-grid@neuron-grid.net" }
]

dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6.12",
    "mkdocs-swagger-ui-tag>=0.7.0",
    "neoteroi-mkdocs>=1.1.1",
    "pymdown-extensions>=10.14.3",
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "W503"]

[tool.ruff.format]
quote-style = "preserve"